<resources>
    <string name="app_name">TecStore</string>
    <string name="Login_text">LOG IN</string>
    <string name="Register_text">REGISTER</string>
    <string name="information_text_1">Live a new experience</string>
    <string name="information_text_2">Enjoy with your friends</string>
    <string name="departamentos">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clothe">Clothing</string>
    <string name="teddie">Teddies</string>
    <string name="gifts">Gifts</string>
    <string name="books">Books</string>
    <string name="sports">Sports</string>
    <string name="bags">Backpack</string>
    <string name="tech">Technology</string>
    <string name="redes_sociales">Social Network</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>

    <string name="extra">Information</string>
    <string name="buy">Buy</string>

    <string name="terms">Terms and conditions</string>
    <string name="contact">Contact</string>
    <string name="faqs">Faqs</string>
    <string name="blog">Blog</string>
    <string name="settings_extra">Settings</string>
    <string name="privacy">Privacy</string>
    <string name="logout">Log Out</string>


    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_link_to_register">Not a member? Get registered now</string>
    <string name="btn_link_to_login">Already registered.</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please add your registered email to sent you password reset instructions.</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_password">Please enter your password</string>
    <string name="email_sent">We already sent an email to reset your password</string>
    <string name="hint_search">Search</string>
    <string name="min_characters">Password must have 6 characters min</string>
    <string name="title_activity_feed__tec_store">Feed_TecStore</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile">PROFILE</string>
    <string name="feed">FEED</string>
    <string name="activity">ACTIVITY</string>
    <string name="settings">SETTINGS</string>

    <string name="ropa">Clothe</string>
    <string name="escuela">School</string>
    <string name="regalos">Gifts</string>
    <string name="tecnologia">Technology</string>
    <string name="playeras_cantidad_guardada">playera_cantidad</string>

    <string name="Playera">T-shirt</string>
    <string name="Bufanda">Scarf</string>
    <string name="Termo">Thermo</string>
    <string name="Peluche">Teddy</string>
    <string name="Sudadera">Sweatshirt</string>
    <string name="Libreta">Notebook</string>
    <string name="Mochila">Bag</string>
    <string name="Gorra">Backpack</string>


</resources>
